--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,6 +5,7 @@
 <div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div><br>
 
 <div class="h-full">
+    <!--이 div 태그 안에 본문 작성하시면 됩니다!-->
 </div>
 
 <div th:replace="~{fragments/footer :: footer}"></div>
