feat: 댓글 수정 페이지 글자 위치 수정

--- a/src/main/resources/templates/comment_update.html
+++ b/src/main/resources/templates/comment_update.html
@@ -4,17 +4,15 @@
 <body class="h-full flex flex-col">
 <div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div><br>
 <header>
-    <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
-        <h1 class="text-3xl font-bold tracking-tight text-gray-900">게시글 제목</h1>
+    <div class="flex justify-center mb-4">
+        <h1 class="text-3xl font-bold tracking-tight text-gray-900">댓글 수정</h1>
     </div>
 </header>
 <div class="h-full flex justify-center">
 
     <main class="flex justify-center items-center w-[90%] bg-gray-100 rounded-md">
-        <form class="m-5 w-full" th:object="${commentUpdateDto}" enctype="multipart/form-data" th:data-comment-id="${commentId}" th:data-post-id="${postId}"
+        <form class="m-5 p-6 w-full" th:object="${commentUpdateDto}" enctype="multipart/form-data" th:data-comment-id="${commentId}" th:data-post-id="${postId}"
               onsubmit="return validateForm()">
-            <label th:for="content" class="block text-lg font-semibold mb-2"><strong>댓글 수정</strong></label>
-
             <div class="flex flex-col">
                 <textarea th:field="*{content}" class="flex-1 border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 mb-2" placeholder="작성 내용을 입력하세요" rows="5" required></textarea>
 
