feat: 이미지 저장 로직 수정 (기존: 이미지 저장 경로를 DB에 저장, 이미지는 프로젝트 경로에 저장, 변경: 이미지를 DB에 저장)

--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -64,8 +64,8 @@
                         <div class="bg-gray-200 p-4 rounded-lg">
                             <span th:text="${comment.content}"></span>
                             <div class="mt-1" th:each="photo : ${comment.getCommentPhotos()}">
-                                <a th:href="${photo.imagePath}" target="_blank" class="image-link">
-                                    <img th:src="${photo.imagePath}" class="object-cover" />
+                                <a href="" target="_blank" class="image-link">
+                                    <img th:src="'data:image/jpeg;base64,' + ${photo.base64Image}" class="object-cover" />
                                 </a>
                             </div>
 
