--- a/src/main/resources/templates/comment_update.html
+++ b/src/main/resources/templates/comment_update.html
@@ -14,6 +14,16 @@
         <form class="m-5 p-6 w-full" th:object="${commentUpdateDto}" enctype="multipart/form-data" th:data-comment-id="${commentId}" th:data-post-id="${postId}"
               onsubmit="return validateForm()">
             <div class="flex flex-col">
+
+                <label for="rating" class="block text-sm text-gray-700 mb-1">평점</label>
+                <select th:field="*{rating}" id="rating" class="border border-gray-300 rounded-lg p-2 mb-2" style="max-width: 120px;">
+                    <option value="5">★★★★★</option>
+                    <option value="4">★★★★☆</option>
+                    <option value="3">★★★☆☆</option>
+                    <option value="2">★★☆☆☆</option>
+                    <option value="1">★☆☆☆☆</option>
+                </select>
+
                 <textarea th:field="*{content}" class="flex-1 border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 mb-2" placeholder="작성 내용을 입력하세요" rows="5" required></textarea>
 
                 <div class="mb-2">
