--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -30,6 +30,18 @@
         </div>
 
         <div class="w-full md:w-[37%] w-90% mb-10 md:m-10 bg-gray-50 p-6 shadow-xl rounded-lg flex-shrink-0" style="align-self: flex-start;">
+
+            <p th:text="${averageRating == 0.0} ? '등록된 평점이 없습니다!' : '평균 평점 : ' + ${averageRating}"></p>
+            <div th:if="${averageRating != 0.0}" class="star-rating">
+                <span th:each="i : ${#numbers.sequence(1, averageRating)}" class="star">★</span>
+                <div th:if="${averageRating%1.0 != 0}">
+                    <span class="star half-star">☆</span>
+                </div>
+                <span th:each="i : ${#numbers.sequence(averageRating + 2, 5)}" class="star empty"
+                      th:if="${averageRating + 2 < 5}">☆</span>
+            </div>
+
+
             <h2 th:text="'로그인 멤버 id = ' + ${loginMember}"></h2>
             <form class="mt-5 mb-5" th:action="@{/api/comment/{postId}(postId=${postId})}" th:object="${commentRequestDto}" method="post" enctype="multipart/form-data" onsubmit="return validateForm()"
                   th:data-post-id="${postId}">
