feat: 게시글 목록 테이블 추가

--- a/src/main/resources/templates/boardPosts.html
+++ b/src/main/resources/templates/boardPosts.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: header}"></head>
+<head th:replace="~{fragments/header :: header}">
+    <script src="/js/footer.js"></script>
+    <script src="/js/board_postList.js"></script>
+</head>
 <body class="h-full flex flex-col">
 <div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div>
 <br>
@@ -44,32 +47,61 @@
         </div>
 
         <!-- 게시글 목록 테이블 -->
+        <table class="w-full border-collapse border">
+            <thead>
+            <tr class="bg-gray-100">
+                <th class="border p-2">번호</th>
+                <th class="border p-2">제목</th>
+                <th class="border p-2">작성자</th>
+                <th class="border p-2">작성일</th>
+                <th class="border p-2">조회</th>
+                <th class="border p-2">추천</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="post : ${posts}">
+                <td class="border p-2" th:text="${post.postId}"></td>
+                <td class="border p-2"><a th:href="@{/board/posts/{id}(id=${post.postId})}" th:text="${post.title}"></a></td>
+                <td class="border p-2" th:text="${post.memberName}"></td>
+                <td class="border p-2" th:text="${#temporals.format(post.createdAt, 'yyyy-MM-dd')}"></td>
+                <td class="border p-2" th:text="${post.views}"></td>
+                <td class="border p-2" th:text="${post.recommends}"></td>
+            </tr>
+            </tbody>
+        </table>
 
         <div class="mt-6 flex justify-center">
             <nav class="inline-flex">
+                <!-- 첫 페이지로 이동 -->
                 <a th:if="${currentPage > 1}"
                    th:href="@{/board/{regionMajor}/posts(regionMajor=${regionMajor},page=1,sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
                    class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
                     &lt;&lt;
                 </a>
+                <!-- 이전 페이지로 이동 -->
                 <a th:if="${currentPage > 1}"
                    th:href="@{/board/{regionMajor}/posts(regionMajor=${regionMajor},page=${currentPage - 1},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
                    class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
                     &lt;
                 </a>
-                <a th:each="pageNum : ${#numbers.sequence(1, totalPages)}"
-                   th:if="${pageNum >= currentPage - 2 and pageNum <= currentPage + 2 and pageNum <= totalPages}"
+
+                <!-- 페이지 번호 표시 -->
+                <a th:each="pageNum : ${#numbers.sequence(1, totalPages > 0 ? totalPages : 1)}"
+                   th:if="${pageNum >= currentPage - 2 and pageNum <= currentPage + 2 and pageNum <= (totalPages > 0 ? totalPages : 1)}"
                    th:href="@{/board/{regionMajor}/posts(regionMajor=${regionMajor},page=${pageNum},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
                    th:text="${pageNum}"
                    th:class="${pageNum == currentPage} ? 'px-3 py-2 bg-blue-500 text-white' : 'px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50'">
                 </a>
-                <a th:if="${currentPage < totalPages}"
+
+                <!-- 다음 페이지로 이동 -->
+                <a th:if="${currentPage < (totalPages > 0 ? totalPages : 1)}"
                    th:href="@{/board/{regionMajor}/posts(regionMajor=${regionMajor},page=${currentPage + 1},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
                    class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
                     &gt;
                 </a>
-                <a th:if="${currentPage < totalPages}"
-                   th:href="@{/board/{regionMajor}/posts(regionMajor=${regionMajor},page=${totalPages},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
+                <!-- 마지막 페이지로 이동 -->
+                <a th:if="${currentPage < (totalPages > 0 ? totalPages : 1)}"
+                   th:href="@{/board/{regionMajor}/posts(regionMajor=${regionMajor},page=${totalPages > 0 ? totalPages : 1},sortBy=${sortBy},searchType=${searchType},keyword=${keyword})}"
                    class="px-3 py-2 border border-gray-300 bg-white text-gray-500 hover:bg-gray-50">
                     &gt;&gt;
                 </a>
@@ -79,7 +111,6 @@
 </div>
 <div th:replace="~{fragments/footer :: footer}"></div>
 </body>
-<script src="/js/footer.js"></script>
-<script src="/js/board_postList.js"></script>
+
 </html>
 
